--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.3",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
+    "solid-app-router": "^0.4.1",
     "solid-js": "^1.4.2"
   }
 }
