--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "solid-app-router": "^0.4.1",
     "solid-js": "^1.4.2"
   }
